Fixed problem with burger-btn visibility in mobile

--- a/styles.css
+++ b/styles.css
@@ -46,24 +46,7 @@ header {
 	text-transform: uppercase;
 	margin-left: 6rem;
 }
-.burger-btn {
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin: 1.5rem 2rem;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	width: 3rem;
-	height: 2rem;
-	display: none;
-}
-.burger-btn span {
-	display: block;
-	background-color: #fff;
-	width: 100%;
-	height: 3px;
-}
+
 
 header h1 {
 	color: var(--color-1);
@@ -85,6 +68,15 @@ header h1 {
 	align-items: center;
 	display:none;
 }
+#mobile-nav ul a{
+	display:block;
+	color:var(--color-1);
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 1.5rem;
+	padding: 2rem 2rem;
+}
+
 #mobile-nav .logo{
 	margin:0;
 }
@@ -96,17 +88,30 @@ header h1 {
 #mobile-nav li{
 	list-style: none;
 }
-#mobile-nav a{
-	display:block;
-	color:var(--color-1);
-	text-decoration: none;
-	text-transform: uppercase;
-	font-size: 1.5rem;
-	padding: 2rem 2rem;
-}
  ul a:hover{
 	text-decoration: underline;
 }
 #mobile-nav:target{
+	display:flex;
+}
+.burger-btn {
+	position: fixed;
+	top: 0;
+	right: 0;
+	margin: 1.5rem 2rem;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	width: 3rem;
+	height: 2rem;
+	display: none;
+}
+.burger-btn span {
+	display: block;
+	background-color: #fff;
+	width: 100%;
+	height: 3px;
+}
+#mobile-nav .burger-btn{
 	display:flex;
 }
